# idetc2019_code

./: README.md
hast/: CMakeLists.txt  README.md  manifest.xml  package.xml  zipper.sh
hast/ardrone-wpa2/: README.md
hast/ardunio/trigger/: trigger.ino
hast/cam_info/: calibrate.py  calibrate.sh  copyyamls.sh  epipoles.py  kobukiCal.sh  kobukiCalChameleonPGR.m  kobuki_chameleon_20171016.yaml  kobuki_chameleon_20180202.yaml  kobuki_chameleon_20180208a.ini  kobuki_chameleon_20180208b.ini  kobuki_chameleon_20180208c.ini  kobuki_chameleon_20180224.ini  kobuki_python_20180224_844.ini  kobuki_python_20180225.ini  kobuki_python_20180226.ini  kobuki_python_20180323_003.ini  marsCalFireflyPGR.m  processDroneCal.m  stereo_calibrate.py
hast/cam_info/archive/: blackflyCal.m  createCal.m_backup  createCal_ChameleonPGR.m  create_balckfly_20170620.yaml  create_balckfly_20170620b.yaml  create_chameleon_20170711.yaml  create_chameleon_20170712.yaml  create_chameleon_20170717.yaml  create_chameleon_20170728.yaml  create_chameleon_20170905.yaml  create_chameleon_20170912.yaml  create_chameleon_20170912b.yaml  create_chameleon_20170912c.yaml  create_chameleon_20170913a.yaml  create_chameleon_20171106.yaml  create_firefly_params.yaml  create_pgr_params.yaml  gigE_setup.sh  kobukiCalFireflyPGR.m  kobuki_firefly_20170905.yaml  kobuki_pgr_params.yaml  kobuki_stereo_params.yaml  loopconvert.sh  marsCalFirefly1394.m  mars_firefly_20170725.yaml  mars_pgr.yaml  mars_pgr_params.yaml  mars_right.yaml  osxCal.m  pgr.yaml  processCal.m
hast/cam_info/ugvn/: ugv3_pgr_params.yaml
hast/classes/include/: DiscreteKF.hpp  apriltagclass.hpp  ckfClass.hpp  fileops.hpp  genheaders.hpp  hastSLAM.hpp  hastUAV.hpp  hastUGV.hpp  utils.hpp
hast/classes/src/: DiscreteKF.cpp  apriltagclass.cpp  ckfClass.cpp  fileops.cpp  hastSLAM.cpp  hastUAV.cpp  hastUGV.cpp  utils.cpp
hast/config/: stereo_default_params.yaml  stereo_gazebo_params.yaml  stereo_tbrl_params.yaml
hast/config/april/: april_costmap_common.yaml  april_costmap_global_params.yaml  april_costmap_local_params.yaml  april_dictionary.yaml
hast/config/kobuki/: kobuki_costmap_common_params.yaml  kobuki_costmap_global_params.yaml  kobuki_costmap_local_params.yaml  kobuki_driver.yaml  kobuki_dwa_gazebo.yaml  kobuki_dwa_tbrl.yaml  kobuki_frames_and_topics.yaml  kobuki_move_base_params.yaml  kobuki_navfn_global.yaml  ugv1_frames_and_topics.yaml  ugv2_frames_and_topics.yaml  ugv3_frames_and_topics.yaml  ugv4_frames_and_topics.yaml
hast/config/kobuki/archive/: kobuki.rviz  kobuki_rollout_params.yaml
hast/config/rviz/: ugvn_mk3.rviz
hast/launch/: ardrone.launch  experiment.launch  gatorROSCal.launch  goalPub.launch  goalPubCli.launch  hast.launch  hast_april_bottomcam.launch  hast_bag.launch  hast_multi.launch  hast_n.launch  hast_slam.launch  hast_stereo_obs.launch  hast_uavSLAM.launch  hast_ugvCKF.launch  offline.launch  pgr_standalone.launch  rawTrigger.launch  rebag.launch  rebag2.launch  rebag_for_aprilsim.launch  rebagtf.launch  rosbagPlay.launch  rvis.launch  shutdownListener.launch  teleop.launch  test_rvis.launch  ugvAction.launch  ugv_logger.launch  velsmoother.launch  zip_source.launch
hast/launch/april/: rviz_tag.launch  tfsetup.launch
hast/launch/kobuki/: kobuki_base.launch  kobuki_base_n.launch  kobuki_driver.launch  kobuki_logger.launch  kobuki_move_base.launch  kobuki_pgr.launch  kobuki_ugvn_TFdescription.launch  pgr_vRAL.launch  ugvn_pgr.launch
hast/launch/sim/: rawImageSim.launch  sim.launch  sim_april_only.launch  simckf.launch
hast/maps/: clear_map.pgm  clear_map.yaml  square300x300.yaml
hast/msg/: VisoInfo.msg_backup  matrix3x3.msg  pixels.msg  posewithheader.msg  uavstate.msg  uavstate_new.msg  ugvstate.msg
hast/msg/old/: DebugPosemsg.msg  Posemsg.msg  eststate.msg  eststate.msg copy  mat2x2.msg  mat3x3.msg  pixelSet.msg  timedtwist.msg
hast/notes/: notes for experiments.txt
hast/pyfuncs/: cropping.json  cropping.py  cropping.yaml  plotcircle.py  undistort.py
hast/src/: experiment.cpp  goalPub.cpp  goalPubCli.cpp  oneCKF.cpp  stereoObs.cpp  tag_tfrviz_init.py  triggerSaveRawClient.cpp  uavAutopilot.cpp  uavSLAM.cpp  uav_n_cmd_switch.py  ugvAction.cpp  ugvAutopilot.cpp  ugvCKF.cpp  ugv_logger.py
hast/src_alt/: cmdVelRepub.cpp  getlinearfit.cpp  killHast.cpp  offlineStereo.cpp  offlineStereo2.cpp  rawImagePub.cpp  rawImagePubClass.cpp  shutdownListener.cpp  triggerSaveRaw.cpp  uavCal.cpp  uavDownImage.cpp
hast/srv/: flipflop.srv  slamswitch.srv  stereoodomcs.srv  uavcontrolstate.srv  uavnavstate.srv  uavpicket.srv  ugvautopilot.srv  ugvdrive.srv  ugvgoal.srv
hast/srv/old/: ControlState.srv  droneState.srv  flyDrone.srv  stampedposition.srv  targets.srv
hast_gazebo/config/: gazebo_kobuki_uav_tags.rviz  gazebo_kobuki_uav_tags_n.rviz  gazebo_ugvn.rviz  gazebo_ugvn_chronos.rviz  gazebo_ugvn_helios0.rviz  gazebo_ugvn_juno.backup.rviz  gazebo_ugvn_juno.rviz  gazebo_ugvn_titan.rviz  gazebo_ugvn_venus.backup.rviz  (+2 more)
hast_multi/: CMakeLists.txt  package.xml
hast_multi/launch/: node_manager.launch
matlab/: HfromCalData.m  HfromCalData_py.m  LoadRunData.m  batch_clas.m  batchclas_1604.m  clas.m  clas_1604.m  cmdline_clas.m  commit.sh  debug.m  fitDataY.m  fitViconClockOffset.m  gameswithH.m  gen_metrics.m  linreg.m  loadData.m  loadSlamData.m  loopClasStats.m  old_clas_dates.m  plot_IROS_2018.m  plotclas_func.m  plotslam_func.m  skewCrossN.m  slam_1604.m  spliner.m  test.m  trackerQCSV.m  uavdp.m  untitled2.m
message_to_tf/: CMakeLists.txt  readme.md
notes/: CMake Warnings.txt  cube_with_qrcode.txt  kobuki_base_launch_topics.txt  move_base_info.txt  multi robot spawn.txt  mymap.pgm  mymap.yaml  sdf_file_with_package_search.txt  unbroken.txt  useful_links.txt  wtf.txt
robot_descriptions/: CMakeLists.txt
robot_plugins/: package.xml  readme.md
scripts/: brute_force_remap.py  build_hast.bash  csvfromgazebo.sh  csvfromtracker.sh  datefromsaturn.sh  datetosaturn.sh  ffmpeg_avi2mp4.sh  ffmpeg_ogv2mp4.sh  loopOverCSV.sh  rqt_graph.sh  sim_ckf.sh  splitcsv_q.py
wifi_wpa/: CMakeLists.txt  README.md  package.xml
(+227 files in other folders)
