<?xml version="1.0"?>
<package>
  <name>hast</name>
  <version>0.0.0</version>
  <description>The hast package</description>

  <maintainer email="turtlebot@todo.todo">turtlebot</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>apriltags_ros</build_depend>
  <build_depend>robot_plugins</build_depend>
  <build_depend>ardrone_autonomy</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>OpenCV</build_depend>
  <!-- <build_depend>opencv2</build_depend> -->
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>pointgrey_camera_driver</build_depend>

  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <run_depend>pcl_conversions</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>libpcl-all</run_depend>


  <run_depend>apriltags_ros</run_depend>
  <run_depend>robot_plugins</run_depend>
  <run_depend>ardrone_autonomy</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>nav_msgs</run_depend>
  <!-- <run_depend>opencv2</run_depend> -->
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>pointgrey_camera_driver</run_depend>


  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>

