<?xml version="1.0"?>
<package>
<!-- <package format="2"> -->
	<name>hast_multi</name>
	<version>0.0.0</version>
	<description>The hast_multi package</description>
	<maintainer email="benjamin@todo.todo">benjamin</maintainer>
	<license>TODO</license>

	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>master_discovery_fkie</build_depend>
	<run_depend>master_discovery_fkie</run_depend>

	<export>
		<!-- <gazebo gazebo_media_path="${prefix}" /> -->
	</export>
</package>
