<?xml version="1.0"?>
<package>
  <name>wifi_wpa</name>
  <version>0.0.0</version>
  <description>Additional support for denmpc</description>
  <maintainer email="benjamin@todo.todo">benjamin</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
